crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_118_TxSROM_Pro_Sport_Hockey_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-118-TxSROM/Pro Sport Hockey.zip
rom_sha256=7cea3d0efb4195096740a376338b160983f2907d96a9233ab0cf6e89a4e2d03f
frames=1141
fb_bytes=245760
cycles=33949778
audio_samples=836505
audio_fnv1a64=1f31ef4572096a80
checkpoint f900 fb_fnv1a64=59a8c6efcc457282
checkpoint f1100 fb_fnv1a64=59a8c6efcc457282
