crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_119_TQROM_High_Speed.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-119-TQROM/High Speed.nes
rom_sha256=78a70c693ebdaeee8c1191e6b2c8cd156ce005341774c68a847a70cc4470c7f0
frames=1141
fb_bytes=245760
cycles=33949779
audio_samples=836505
audio_fnv1a64=86dc058d48a4a03a
checkpoint f900 fb_fnv1a64=5a1e659a7af9e9a2
checkpoint f1100 fb_fnv1a64=6763bb2ded5769fe
